# api/public_api.swagger.json
@@ -3276,12 +3276,47 @@
       },
       "required": ["subOrganizationName", "rootUsers", "rootQuorumThreshold"]
     },
+    "CreateSubOrganizationIntentV6": {
+      "type": "object",
+      "properties": {
+        "subOrganizationName": {
+          "type": "string",
+          "description": "Name for this sub-organization"
+        },
+        "rootUsers": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/RootUserParamsV3"
+          },
+          "description": "Root users to create within this sub-organization"
+        },
+        "rootQuorumThreshold": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The threshold of unique approvals to reach root quorum. This value must be less than or equal to the number of root users"
+        },
+        "wallet": {
+          "$ref": "#/definitions/WalletParams",
+          "description": "The wallet to create for the sub-organization"
+        },
+        "disableEmailRecovery": {
+          "type": "boolean",
+          "description": "Disable email recovery for the sub-organization"
+        },
+        "disableEmailAuth": {
+          "type": "boolean",
+          "description": "Disable email auth for the sub-organization"
+        }
+      },
+      "required": ["subOrganizationName", "rootUsers", "rootQuorumThreshold"]
+    },
     "CreateSubOrganizationRequest": {
       "type": "object",
       "properties": {
         "type": {
           "type": "string",
-          "enum": ["ACTIVITY_TYPE_CREATE_SUB_ORGANIZATION_V5"]
+          "enum": ["ACTIVITY_TYPE_CREATE_SUB_ORGANIZATION_V6"]
         },
         "timestampMs": {
           "type": "string",
@@ -3292,7 +3327,7 @@
           "description": "Unique identifier for a given Organization."
         },
         "parameters": {
-          "$ref": "#/definitions/CreateSubOrganizationIntentV5"
+          "$ref": "#/definitions/CreateSubOrganizationIntentV6"
         }
       },
       "required": ["type", "timestampMs", "organizationId", "parameters"]
@@ -3354,6 +3389,24 @@
       "required": ["subOrganizationId"]
     },
     "CreateSubOrganizationResultV5": {
+      "type": "object",
+      "properties": {
+        "subOrganizationId": {
+          "type": "string"
+        },
+        "wallet": {
+          "$ref": "#/definitions/WalletResult"
+        },
+        "rootUserIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      },
+      "required": ["subOrganizationId"]
+    },
+    "CreateSubOrganizationResultV6": {
       "type": "object",
       "properties": {
         "subOrganizationId": {
@@ -6097,6 +6150,9 @@
         },
         "createReadWriteSessionResult": {
           "$ref": "#/definitions/CreateReadWriteSessionResult"
+        },
+        "createSubOrganizationResultV6": {
+          "$ref": "#/definitions/CreateSubOrganizationResultV6"
         }
       }
     },
@@ -6146,6 +6202,44 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/ApiKeyParams"
+          },
+          "description": "A list of API Key parameters."
+        },
+        "authenticators": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/AuthenticatorParamsV2"
+          },
+          "description": "A list of Authenticator parameters."
+        },
+        "oauthProviders": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/OauthProviderParams"
+          },
+          "description": "A list of Oauth providers."
+        }
+      },
+      "required": ["userName", "apiKeys", "authenticators", "oauthProviders"]
+    },
+    "RootUserParamsV3": {
+      "type": "object",
+      "properties": {
+        "userName": {
+          "type": "string",
+          "description": "Human-readable name for a User."
+        },
+        "userEmail": {
+          "type": "string",
+          "description": "The user's email address."
+        },
+        "apiKeys": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/ApiKeyParamsV2"
           },
           "description": "A list of API Key parameters."
         },
