# pkg/api/models/root_user_params_v3.go
@@ -1,0 +1,272 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// RootUserParamsV3 root user params v3
+//
+// swagger:model RootUserParamsV3
+type RootUserParamsV3 struct {
+
+	// A list of API Key parameters.
+	// Required: true
+	APIKeys []*APIKeyParamsV2 `json:"apiKeys"`
+
+	// A list of Authenticator parameters.
+	// Required: true
+	Authenticators []*AuthenticatorParamsV2 `json:"authenticators"`
+
+	// A list of Oauth providers.
+	// Required: true
+	OauthProviders []*OauthProviderParams `json:"oauthProviders"`
+
+	// The user's email address.
+	UserEmail string `json:"userEmail,omitempty"`
+
+	// Human-readable name for a User.
+	// Required: true
+	UserName *string `json:"userName"`
+}
+
+// Validate validates this root user params v3
+func (m *RootUserParamsV3) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAPIKeys(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateAuthenticators(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOauthProviders(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUserName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RootUserParamsV3) validateAPIKeys(formats strfmt.Registry) error {
+
+	if err := validate.Required("apiKeys", "body", m.APIKeys); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.APIKeys); i++ {
+		if swag.IsZero(m.APIKeys[i]) { // not required
+			continue
+		}
+
+		if m.APIKeys[i] != nil {
+			if err := m.APIKeys[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("apiKeys" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("apiKeys" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *RootUserParamsV3) validateAuthenticators(formats strfmt.Registry) error {
+
+	if err := validate.Required("authenticators", "body", m.Authenticators); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Authenticators); i++ {
+		if swag.IsZero(m.Authenticators[i]) { // not required
+			continue
+		}
+
+		if m.Authenticators[i] != nil {
+			if err := m.Authenticators[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("authenticators" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("authenticators" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *RootUserParamsV3) validateOauthProviders(formats strfmt.Registry) error {
+
+	if err := validate.Required("oauthProviders", "body", m.OauthProviders); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.OauthProviders); i++ {
+		if swag.IsZero(m.OauthProviders[i]) { // not required
+			continue
+		}
+
+		if m.OauthProviders[i] != nil {
+			if err := m.OauthProviders[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("oauthProviders" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("oauthProviders" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *RootUserParamsV3) validateUserName(formats strfmt.Registry) error {
+
+	if err := validate.Required("userName", "body", m.UserName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this root user params v3 based on the context it is used
+func (m *RootUserParamsV3) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateAPIKeys(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateAuthenticators(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateOauthProviders(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RootUserParamsV3) contextValidateAPIKeys(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.APIKeys); i++ {
+
+		if m.APIKeys[i] != nil {
+
+			if swag.IsZero(m.APIKeys[i]) { // not required
+				return nil
+			}
+
+			if err := m.APIKeys[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("apiKeys" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("apiKeys" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *RootUserParamsV3) contextValidateAuthenticators(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Authenticators); i++ {
+
+		if m.Authenticators[i] != nil {
+
+			if swag.IsZero(m.Authenticators[i]) { // not required
+				return nil
+			}
+
+			if err := m.Authenticators[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("authenticators" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("authenticators" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *RootUserParamsV3) contextValidateOauthProviders(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.OauthProviders); i++ {
+
+		if m.OauthProviders[i] != nil {
+
+			if swag.IsZero(m.OauthProviders[i]) { // not required
+				return nil
+			}
+
+			if err := m.OauthProviders[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("oauthProviders" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("oauthProviders" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RootUserParamsV3) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RootUserParamsV3) UnmarshalBinary(b []byte) error {
+	var res RootUserParamsV3
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
